-- vim: set textwidth=80:
name: c-to-bytecode
version: 0.0.1
synopsis: A compiler from C to bytecode and interpreter for the latter.
license: PublicDomain
author: Anton Golov
build-type: Simple
cabal-version: >= 1.8

executable compiler
  main-is: Compiler.hs
  build-depends:
    base
  hs-source-dirs: .
  ghc-options: -Wall

executable interpreter
  main-is: Interpreter.hs
  build-depends:
    base, mtl, containers, vector, lens
  hs-source-dirs: .
  ghc-options: -Wall
  extensions:
    TemplateHaskell, ConstraintKinds, FlexibleContexts
